--- a/src/styles/mapContainer.css
+++ b/src/styles/mapContainer.css
@@ -1,4 +1,36 @@
+
 .fullscreenMap{
+  cursor: all-scroll !important;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left:0;
   width: 100%;
   height: 100%;
+
+}
+
+.mapContainer{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.overlayButtonRight{
+  z-index: 5;
+  width: fit-content;
+  position: fixed;
+  bottom: 1.5em;
+  right:1em;
+}
+
+.overlayButtonLeft{
+  z-index: 5;
+  width: fit-content;
+  position: fixed;
+  bottom: 1.5em;
+  left: 1em;
 }
