--- a/src/styles/navMenu.css
+++ b/src/styles/navMenu.css
@@ -24,6 +24,8 @@
   background: var(--secondary-color);
   -webkit-box-shadow: 10px var(--accent-color-light);
   box-shadow: 0px 0px 10px var(--accent-color);
+  -webkit-user-select: none;
+  -moz-user-select: none;
 }
 
 .menuGrid{
@@ -31,7 +33,7 @@
   margin: 0 auto;
   display: grid;
   grid-template-areas:
-    "left center right";
+    "left center center center center right right right right right right";
   grid-gap: 30px;
   width: -webkit-fill-available;
   width: -moz-available;
@@ -39,45 +41,52 @@
 }
 
 .menuLogo{
+  cursor: pointer;
+  display: flex;
   grid-area: left;
-  padding:10px;
+  margin: 0;
+  width: fit-content;
+  height: 4em;
+  width: -moz-fit-content;
 }
-
+/*
 .menuButtonList{
-  color: var(--primary-text-color);
+  color: var(--secondary-text-color);
   list-style-type: none;
   padding: 0;
   margin: 0;
+  height: 4em;
   grid-area: right;
 }
 
 .menuItemText{
+  
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
   font-size: 1.2em;
   display: block;
   font-weight: 500;
 }
-
+*/
 .logoText{
+  
   color: var(--primary-text-color);
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
-  margin: 0px;
+  margin: auto;
   font-weight: 700;
   font-size: 1.2em;
   padding: 10px;
 }
-
+/*
 .menuListItem{
   cursor: pointer;
   float: right;
   margin: 0px;
-  padding: 0px 20px;
-  height: 100%;
+  padding: 0px 15px;
+  height: 4em;
   display: block;
   text-align: center;
   align-self: center;
   transition: 0s;
-  color: var(--effect-color);
 }
 
 .menuListItem:hover{
@@ -90,7 +99,8 @@
 .accountDropDownContainer{
   float: right;
   height: fit-content;
-  width: fit-content;
+  height: -moz-fit-content;
+  width: 100%;
   top: 4em;
 }
 
@@ -103,3 +113,10 @@
   width: -moz-available;
   border-radius: 5px;
 }
+
+.accountItemContainer{
+  display: flex;
+  width: fit-content;
+  width: -moz-fit-content;
+}
+*/
