some tests + comments, localization and themes

--- a/src/styles/containers.css
+++ b/src/styles/containers.css
@@ -1,3 +1,31 @@
+/* These doesn't matter since they are replaced when settings are inited
+:root{
+  --primary-color: #161616;
+  --secondary-color: #1b1c1d;
+
+  --primary-text-color: #ffffff;
+  --secondary-text-color: #a0a0a0;
+
+  --accent-color: #383838;
+  --accent-color-dark: #1b1c1d;
+  --accent-color-light: #808080;
+  --effect-color: #cecece;
+}
+*/
+
+:root{
+  --primary-color: #ffffff;
+  --secondary-color: #e0e0e0;
+
+  --primary-text-color: #000000;
+  --secondary-text-color: #505050;
+
+  --accent-color: #ffffff;
+  --accent-color-dark: #e0e0e0;
+  --accent-color-light: #ffffff;
+  --effect-color: #ffffff;
+}
+
 html, body, #root, #app, #app>div {
   height: auto;
   min-height: 100%;
