--- a/src/styles/navMenu.css
+++ b/src/styles/navMenu.css
@@ -1,51 +1,34 @@
-:root{
-  --primary-color: #161616;
-  --secondary-color: #1b1c1d;
-
-  --primary-text-color: #ffffff;
-  --secondary-text-color: #808080;
-
-  
-  --accent-color: rgb(66, 66, 66);
-  --accent-color-dark: #1b1c1d;
-  --accent-color-light: #808080;
-  --effect-color: #cecece;
-
-}
-
 .menuContainer{
-  display: flex;
-  flex-direction: column;
-  flex: 0 1 auto;
-  z-index: 3;
+  z-index: 5;
   width: 100%;
   height: 4em;
   top: 0;
   background: var(--secondary-color);
-  -webkit-box-shadow: 10px var(--accent-color-light);
-  box-shadow: 0px 0px 10px var(--accent-color);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+
+}
+
+.menuInnerContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex: 0 1 auto;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: -webkit-fill-available;
+  width: -moz-available;
   -webkit-user-select: none;
   -moz-user-select: none;
 }
 
-.menuGrid{
-  max-width: 1200px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-areas:
-    "left center center center center right right right right right right";
-  grid-gap: 30px;
-  width: -webkit-fill-available;
-  width: -moz-available;
-  border-radius: 5px;
-}
-
 .menuLogo{
-  cursor: pointer;
+
   display: flex;
-  grid-area: left;
+  grid-area: logo;
   margin: 0;
-  width: fit-content;
+  width: 100%;
+  max-width: 18%;
   height: 4em;
   width: -moz-fit-content;
 }
@@ -68,10 +51,10 @@
 }
 */
 .logoText{
-  
+  cursor: pointer;
   color: var(--primary-text-color);
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
-  margin: auto;
+  margin: auto 0;
   font-weight: 700;
   font-size: 1.2em;
   padding: 10px;
@@ -120,3 +103,48 @@
   width: -moz-fit-content;
 }
 */
+
+.projectInfoButtonContainer{
+  height: 4em;
+  display: flex;
+  flex-direction: column;
+  min-width: fit-content;
+}
+.projectInfoButton{
+  background: var(--secondary-color);
+  color: var(--secondary-text-color);
+  cursor: pointer;
+  display: inline-block;
+  min-height: 1em;
+  outline: 0;
+  border: none;
+  vertical-align: baseline;
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  font-size: 1.2em;
+  margin: 0 .25em 0 .25em;
+  padding: .78571429em 0.5em .78571429em;
+  text-transform: none;
+  text-shadow: none;
+  font-weight: 600;
+  line-height: 1em;
+  font-style: normal;
+  text-align: center;
+  text-decoration: none;
+  border-radius: .28571429rem;
+  background-position: center;
+  transition: background 0s;
+  margin: auto;
+}
+
+.projectInfoButton:hover{
+  color: var(--primary-text-color);
+}
+
+.projectSelectContainer{
+  display: flex;
+
+  justify-content: space-between;
+  width: 100%;
+  max-width: 45%;
+  margin: 0 1%
+}
