--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -66,3 +66,24 @@
 
 }
 
+@keyframes radientGlimmer {
+  0% {background: var(--accent-color);}
+  50% {background: linear-gradient()}
+  100% {background: var(--accent-color);}
+}
+
+.pulsingButton{
+  animation: pulse 1s infinite;
+  animation-timing-function: ease-in-out;
+  
+
+}
+
+@keyframes pulse{
+  0%{transform: scale(1); animation-timing-function: ease-in-out;}
+  50%{transform: scale(1.05);animation-timing-function: ease-in-out;}
+  0%{transform: scale(1);animation-timing-function: ease-in-out;}
+  
+  
+}
+
