--- a/src/styles/inputs.css
+++ b/src/styles/inputs.css
@@ -18,7 +18,7 @@
   bottom: 2px;
   margin: auto;
   width: 0%;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid var(--primary-text-color);
   transition: linear width 0s;
 }
 .inputFocusLineComment{
@@ -48,7 +48,7 @@
 }
 
 .input:focus + .inputFocusLine{
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid var(--primary-text-color);
   width:100%;
   transition-duration: 0.3s;
 }
