--- a/src/styles/loginForm.css
+++ b/src/styles/loginForm.css
@@ -1,18 +1,3 @@
-:root{
-  --primary-color: #161616;
-  --secondary-color: #1b1c1d;
-
-  --primary-text-color: #ffffff;
-  --secondary-text-color: #808080;
-
-  
-  --accent-color: rgb(66, 66, 66);
-  --accent-color-dark: #1b1c1d;
-  --accent-color-light: #808080;
-  --effect-color: #cecece;
-
-}
-
 .loginContainer{
   z-index: 4;
   background: var(--secondary-color);
@@ -52,7 +37,7 @@
   bottom: 2px;
   margin: auto;
   width: 0%;
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid var(--primary-text-color);
   transition: linear width 0s;
 }
 .inputFocusLineComment{
@@ -82,7 +67,7 @@
 }
 
 .input:focus + .inputFocusLine{
-  border-bottom: 2px solid white;
+  border-bottom: 2px solid var(--primary-text-color);
   width:100%;
   transition-duration: 0.3s;
 }
