--- a/src/styles/mapContainer.css
+++ b/src/styles/mapContainer.css
@@ -1,4 +1,3 @@
-
 .fullscreenMap{
   cursor: all-scroll !important;
   z-index: 1;
@@ -34,4 +33,12 @@
   position: fixed;
   bottom: 1.5em;
   left: 1em;
+}
+
+.overlayButtonCenter{
+  z-index: 2;
+  width: fit-content;
+  position: fixed;
+  bottom: 45%;
+  left: 55%;
 }
