--- a/src/styles/containers.css
+++ b/src/styles/containers.css
@@ -64,3 +64,21 @@ html, body, #root, #app, #app>div {
   flex: 1;
   z-index: 1;
 }
+
+.titleContainerMobile{
+  width: -webkit-fill-available;
+  width: -moz-available;
+  max-width: 100%;
+  max-height: 10%;
+  padding: 0 10px;
+  margin: 0 0 2em 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.titleHeaderMobile{
+  display: flex;
+  width: -webkit-fill-available;
+  width: -moz-available;
+
+}
