--- a/src/styles/loginForm.css
+++ b/src/styles/loginForm.css
@@ -5,22 +5,31 @@
   width: -moz-available;
   height: max-content;
   max-width: 400px;
-  max-height: 300px;
+  max-height: 400px;
   border-radius: 5px;
   margin:auto;
   padding: 20px;
-
   box-shadow: 0 0 5px var(--accent-color);
   transition: box-shadow 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .loginContainer:focus-within{
   box-shadow: 0 0 10px var(--accent-color-light)
 }
 
+.loginContainerMobile{
+  background: var(--secondary-color);
+  height: 100%;
+
+}
+
+
 .inputContainer{
   background: var(--secondary-color);
   margin: 20px 0px;
-  padding: 5px;
+  padding: 5px 0;
   width: -webkit-fill-available;
   width: -moz-available;
   border: none;
@@ -75,10 +84,11 @@
 .loginForm{
 
   background: var(--secondary-color);
-  margin: 20px 5px;
+  margin: auto;
   padding: 5px;
   width: -webkit-fill-available;
   width: -moz-available;
+
   border: none;
   color: var(--primary-text-color);
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
@@ -88,64 +98,28 @@
   border-bottom: 2px linear-gradient(to right, var(--accent-color) 50%, white 50%);
   resize: none;
   transition: border-bottom-color 2s;
+  
+}
+.loginFormMobile{
+  height: -webkit-fill-available;
+  height: -moz-available;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .loginForm:focus{
   outline: none;
 }
 
-.rippleButton {
-  background: var(--accent-color);
-  color: var(--primary-text-color);
-  cursor: pointer;
-  display: inline-block;
-  min-height: 1em;
-  outline: 0;
-  border: none;
-  vertical-align: baseline;
-  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
-  margin: 0 .25em 0 0;
-  padding: .78571429em 1.5em .78571429em;
-  text-transform: none;
-  text-shadow: none;
-  font-weight: 700;
-  line-height: 1em;
-  font-style: normal;
-  text-align: center;
-  text-decoration: none;
-  border-radius: .28571429rem;
-  background-position: center;
-  transition: background 0s;
-}
-.rippleButton:hover {
-  background: var(--accent-color-light) radial-gradient(circle, transparent 1%, var(--accent-color-light) 1%) center/15000%;
-  transition: background 0.5s;
-}
-.rippleButton:active {
-  background-color: var(--effect-color);
-  background-size: 100%;
-  transition: background 0s;
-}
-
-.positiveButton {
-
+.buttonContainer{
+  display: flex;
+  flex-direction: row;
   float: right;
-  margin: 0px;
 }
-.positiveButton:hover {
-  background: var(--accent-color-light) radial-gradient(circle, transparent 1%, var(--accent-color-light) 1%) center/15000%;
-}
-
-.negativeButton {
-  background: var(--accent-color-dark);
-  color: var(--secondary-text-color);
-  float: right;
-  transition: background 0s;
-}
-.negativeButton:hover {
-  background: var(--accent-color) radial-gradient(circle, transparent 1%, var(--accent-color) 1%) center/15000%;
-  color: var(--primary-text-color);
-  transition: all 0.5s;
+.buttonContainerMobile{
+  display: flex;
+  flex-direction: row;
 }
 
 .centerAlign{
@@ -167,3 +141,4 @@
 .bottomPadding30{
   padding-bottom: 30px;
 }
+
