--- a/src/styles/postView.css
+++ b/src/styles/postView.css
@@ -5,17 +5,74 @@
   width: -moz-available;
   height: -webkit-fill-available;
   height: -moz-available;
+  width: 100%;
+  height: 100%;
   max-width: 600px;
   max-height: 700px;
   border-radius: 5px;
   margin:auto;
-  padding: 20px;
+  padding: 10px;
 
-  box-shadow: 0 0 5px var(--accent-color);
-  transition: box-shadow 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
 }
-.postViewContainer:focus-within{
-  box-shadow: 0 0 10px var(--accent-color-light)
+
+
+
+.postViewContainerLW{
+  z-index: 4;
+  background: var(--secondary-color);
+  width: -webkit-fill-available;
+  height: 100%;
+
+  border-radius: 5px;
+  margin:auto;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.postViewContainerMobile{
+  z-index: 4;
+  background: var(--secondary-color);
+  width: -webkit-fill-available;
+  height: 100%;
+
+  border-radius: 5px;
+  margin:auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.postTitleContainer{
+  width: -webkit-fill-available;
+  width: -moz-available;
+  height: -webkit-fill-available;
+  height: -moz-available;
+  max-width: 100%;
+  max-height: 10%;
+  padding: 0 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.postTitleHeader{
+  display: flex;
+  width: -webkit-fill-available;
+  width: -moz-available;
+  height: 100%;
+}
+.postTitleTextMobile{
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 2em;
+  text-align: center;
+  margin: auto;
 }
 
 .postImageContainer{
@@ -23,13 +80,31 @@
   width: -moz-available;
   height: -webkit-fill-available;
   height: -moz-available;
-  max-width: 600px;
-  max-height: 337.5px;
-  margin: 0 0 1em 0;
+  max-width: 100%;
+  max-height: 50%;
+  padding: 0 10px;
 }
+
+
+
+.postImage{
+  width: -webkit-fill-available;
+  width: -moz-available;
+  height: -webkit-fill-available;
+  height: -moz-available;
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 5px;
+}
+
 .infoContainer{
+
 }
 .placeholderImage{
+  width: -webkit-fill-available;
+  width: -moz-available;
+  height: -webkit-fill-available;
+  height: -moz-available;
   width: 100%;
   height: 100%;
   background: gray;
@@ -38,11 +113,19 @@
 .postContextContainer{
   display: flex;
   justify-content: space-between;
+  width: -webkit-fill-available;
+  width: -moz-available;
+  height: -webkit-fill-available;
+  height: -moz-available;
+  max-width: 100%;
+  max-height: 10%;
+  padding: 0 10px;
 }
 .postButtonsContainer{
   justify-self: flex-end;
   display: flex;
   justify-content: flex-end;
+  height: fit-content;
 }
 
 .storyContainer{
@@ -50,13 +133,16 @@
   width: -moz-available;
   height: -webkit-fill-available;
   height: -moz-available;
-  max-height: 170px;
+  max-height: 20%;
+  padding: 0 10px;
+
 }
 
 .postCloseContainer{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 20px;
+  width: -webkit-fill-available;
+  width: -moz-available;
+  height: -webkit-fill-available;
+  height: -moz-available;
+  max-height: fit-content;
+  padding: 10px;
 }
