--- a/src/styles/texts.css
+++ b/src/styles/texts.css
@@ -14,3 +14,32 @@
 .textCenter{
   text-align: center;
 }
+
+.titleText{
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 2em;
+  text-align: center;
+  margin: 0;
+}
+
+.linkText{
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  color: var(--primary-text-color);
+  font-weight: 500;
+  cursor: pointer;
+  padding: 5px 0;
+  margin: 0;
+  width: fit-content;
+  
+}
+
+.titleTextMobile{
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 2em;
+  text-align: center;
+  margin: auto;
+}
