--- a/src/styles/listView.css
+++ b/src/styles/listView.css
@@ -1,8 +1,8 @@
 .listViewContainer{
-  background: var(--primary-color);
-  height: 100%;
-  width: 100%;
-  z-index: 2;
+  background: transparent;
+  z-index: 4;
+  margin: auto;
+  display: flex;
 }
 
 .listViewInnerContainer{
@@ -48,7 +48,7 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: auto;
 }
 .postListContainerMobile{
   width: 100%;
@@ -63,5 +63,5 @@
 .postPreviewContainer{
   width: 60%;
   margin: 1%;
-  height: 100%;
+  height: auto;
 }
