--- a/src/styles/postView.css
+++ b/src/styles/postView.css
@@ -29,7 +29,6 @@
 
   border-radius: 5px;
   margin:auto;
-  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -82,19 +81,20 @@
   height: -moz-available;
   max-width: 100%;
   max-height: 50%;
-  padding: 0 10px;
+  padding: 10px;
+  display: flex;
 }
 
 
 
 .postImage{
-  width: -webkit-fill-available;
-  width: -moz-available;
-  height: -webkit-fill-available;
-  height: -moz-available;
+  width: 100%;
+  height: auto;
   max-width: 100%;
   max-height: 100%;
   border-radius: 5px;
+  display: block;
+  margin: auto;
 }
 
 .infoContainer{
