--- a/src/styles/texts.css
+++ b/src/styles/texts.css
@@ -23,6 +23,14 @@
   text-align: center;
   margin: 0;
 }
+.titleTextAuto{
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 2em;
+  text-align: center;
+  margin: auto;
+}
 
 .linkText{
   font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
