--- a/src/styles/postView.css
+++ b/src/styles/postView.css
@@ -88,12 +88,11 @@
 
 
 .postImage{
-  width: 100%;
-  height: auto;
+  height: inherit;
   max-width: 100%;
   max-height: 100%;
   border-radius: 5px;
-  display: block;
+  display: flex;
   margin: auto;
 }
 
