--- a/src/styles/newPost.css
+++ b/src/styles/newPost.css
@@ -18,9 +18,12 @@
 }
 
 .newPostContainerMobile{
+  z-index: 4;
   background: var(--secondary-color);
-  width: 100%;
-  height: 100%;
+  width: -webkit-fill-available;
+  width: -moz-available;
+  height: -webkit-fill-available;
+  height: -moz-available;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
