--- a/src/styles.css
+++ b/src/styles.css
@@ -19,124 +19,94 @@ html, body, #root, #app, #app>div {
 }
 
 /*Containers*/
-.rippleButton {
-  background: var(--accent-color);
-  color: var(--primary-text-color);
-  cursor: pointer;
-  display: inline-block;
-  min-height: 1em;
-  outline: 0;
-  border: none;
-  vertical-align: baseline;
-  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
-  font-size: 1em;
-  margin: 0 .25em 0 .25em;
-  padding: .78571429em 1.5em .78571429em;
-  text-transform: none;
-  text-shadow: none;
-  font-weight: 700;
-  line-height: 1em;
-  font-style: normal;
-  text-align: center;
-  text-decoration: none;
-  border-radius: .28571429rem;
-  background-position: center;
-  transition: background 0s;
+/* These doesn't matter since they are replaced when settings are inited
+:root{
+  --primary-color: #161616;
+  --secondary-color: #1b1c1d;
+
+  --primary-text-color: #ffffff;
+  --secondary-text-color: #a0a0a0;
+
+  --accent-color: #383838;
+  --accent-color-dark: #1b1c1d;
+  --accent-color-light: #808080;
+  --effect-color: #cecece;
 }
-.rippleButton:hover {
-  background: var(--accent-color-light) radial-gradient(circle, transparent 1%, var(--accent-color-light) 1%) center/15000%;
-  transition: background 0.5s;
-}
-.rippleButton:active {
-  background-color: var(--effect-color);
-  background-size: 100%;
-  transition: background 0s;
+*/
+
+:root{
+  --primary-color: #ffffff;
+  --secondary-color: #e0e0e0;
+
+  --primary-text-color: #000000;
+  --secondary-text-color: #505050;
+
+  --accent-color: #ffffff;
+  --accent-color-dark: #e0e0e0;
+  --accent-color-light: #ffffff;
+  --effect-color: #ffffff;
 }
 
-.smallButton{
-  padding: 0.5em
+html, body, #root, #app, #app>div {
+  height: auto;
+  min-height: 100%;
+}
+.appContainer{
+  background-color: #161616;
+  margin: 0px;
+  position: absolute;
+  height: 100% !important;
+  width: 100% !important;
+  display: flex;
+  flex-direction: column;
 }
 
-.positiveButton {
-  background: var(--accent-color);
-}
-.positiveButton:hover {
-  background: var(--accent-color-light) radial-gradient(circle, transparent 1%, var(--accent-color-light) 1%) center/15000%;
-}
-
-
-.negativeButton {
-  background: var(--accent-color-dark);
-  color: var(--secondary-text-color);
-  transition: background 0s;
-}
-.negativeButton:hover {
-  background: var(--accent-color) radial-gradient(circle, transparent 1%, var(--accent-color) 1%) center/15000%;
-  color: var(--primary-text-color);
-  transition: all 0.5s;
+.popUpContainer{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 3;
 }
 
-.fillButton{
+.popUpBackground{
+  background: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 3;
+}
+
+.contentContainer{
+  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  z-index: 1;
+}
+
+.titleContainerMobile{
+  width: 100%;
+  height: fit-content;
+  max-width: 100%;
+  margin: 0 0 2em 0;
+  display: flex;
+  flex-direction: row;
+}
+
+.titleHeaderMobile{
+  display: flex;
   width: -webkit-fill-available;
   width: -moz-available;
 }
 
-.bigButton{
-  font-weight: 900;
-  font-size: 1em;
-  margin: 0;
-
-}
-
-@keyframes radientGlimmer {
-  0% {background: var(--accent-color);}
-  50% {background: linear-gradient()}
-  100% {background: var(--accent-color);}
-}
-
-.pulsingButton{
-  animation: pulse 1s infinite;
-  animation-timing-function: ease-in-out;
-  
-
-}
-
-@keyframes pulse{
-  0%{transform: scale(1); animation-timing-function: ease-in-out;}
-  50%{transform: scale(1.05);animation-timing-function: ease-in-out;}
-  0%{transform: scale(1);animation-timing-function: ease-in-out;}
-  
-  
-}
-
-
-.mobileButtonContainer{
-  cursor: pointer;
-  background: transparent;
-  outline: none;
-  border: 0;
-  padding: 0;
-}
-
-.mobileIcon{
-  fill: var(--secondary-text-color);
-  width: 5em;
-  height: 5em;
-}
-
-.mobileIconSecondary{
-  fill: var(--secondary-text-color);
-  width: 5em;
-  height: 5em;
-}
-
-.mobileIconSmall{
-  cursor: pointer;
-  fill: var(--primary-text-color);
-  stroke: none;
-  margin: 0.5em;
-  width: 2em;
-  height: 2em;
+.dualButtonContainer{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin: 1em 0;
+  justify-content: space-between;
 }
 
 /*Buttons*/
@@ -609,9 +579,6 @@ html, body, #root, #app, #app>div {
   margin: auto;
 }
 
-.fileInput{
-
-}
 
 .previewText{
   text-align: center;
@@ -846,9 +813,6 @@ input[type="file"]{
   float: right;
   fill: var(--secondary-text-color);
   
-}
-.dropDownIcon2{
-  background: url("../resources/arrow_drop_down-24px.svg") no-repeat center right var(--secondary-text-color);
 }
 
 .divider{
@@ -1323,9 +1287,6 @@ input[type="file"]{
   flex-direction: column;
 }
 
-.myPostsContainerMobile{
-  
-}
 
 .myPostsList{
   width: -webkit-fill-available;
@@ -1806,9 +1767,6 @@ input[type="file"]{
   margin: auto;
 }
 
-.infoContainer{
-
-}
 .placeholderImage{
   width: -webkit-fill-available;
   width: -moz-available;
@@ -1937,13 +1895,10 @@ input[type="file"]{
 
 .dropDownIcon{
   padding: 0;
-  margin: 0;
+  margin: auto;
   float: right;
   fill: var(--secondary-text-color);
   
-}
-.dropDownIcon2{
-  background: url("../resources/arrow_drop_down-24px.svg") no-repeat center right var(--secondary-text-color);
 }
 
 .dropDownListContainer{
@@ -2245,9 +2200,6 @@ input:checked + .sliderRound:before{
   margin: auto;
 }
 
-.mobileMenuProjectContainer{
-
-}
 .mobileMenuButton{
   width: 100%;
   
@@ -2276,12 +2228,6 @@ input:checked + .sliderRound:before{
   margin: auto;
 }
 
-.mobileMenuNavigationContainer{
-
-}
-.mobileMenuUserContainer{
-
-}
 
 
 /**/
