--- a/src/styles/loginForm.css
+++ b/src/styles/loginForm.css
@@ -22,6 +22,10 @@
 .loginContainerMobile{
   background: var(--secondary-color);
   height: 100%;
+  z-index: 4;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
 }
 
@@ -106,6 +110,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0;
 }
 
 .loginForm:focus{
