user setting mobile component

--- a/src/styles/userSettings.css
+++ b/src/styles/userSettings.css
@@ -7,7 +7,7 @@
   max-height: 800px;
   border-radius: 5px;
   margin:auto;
-  padding: 10px;
+  padding: 2%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -16,15 +16,40 @@
 .userSettingsForm{
   background: var(--secondary-color);
   border-radius: 5px;
-  padding: 1%;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: auto;
+  margin: 0;
 }
 
-.infoTextContainer{
-  padding: 5px;
+.userSettingsFormMobile{
+  background: var(--secondary-color);
+  border-radius: 5px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 10px;
+}
+
+.userSettingsContainerMobile{
+  z-index: 4;
+  background: var(--secondary-color);
+  width: 100%;
+  height: 100%;
+  margin:auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.deleteAccountButtonContainerMobile{
+  margin: 0.5em 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 .deleteAccountButtonContainer{
